commit translated contents

--- a/aspnetcore/whats-new/index.yml
+++ b/aspnetcore/whats-new/index.yml
@@ -6,12 +6,12 @@ metadata:
   description: Dokumentation zu den neuen und aktualisierten Inhalten in ASP.NET Core.
   ms.topic: landing-page
   ms.date: 08/03/2020
-  ms.openlocfilehash: 5d8bc150d91010cce31d885b3a15e80a8efc7ac3
-  ms.sourcegitcommit: 8ed9a413bdc2d665ad11add8828898d726ccb106
+  ms.openlocfilehash: cb0db16ae400573fb5dafb1d2295037f15e0b9e9
+  ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "89280412"
+  ms.lasthandoff: 09/17/2020
+  ms.locfileid: "90721644"
 landingContent:
 - title: Neuerungen in ASP.NET Core
   linkLists:
@@ -40,7 +40,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: Leitfaden für Mitwirkende an der Microsoft-Dokumentation
-      url: https://docs.microsoft.com/contribute
+      url: /contribute
     - text: Leitfaden für Mitwirkende an der ASP.NET Core-Dokumentation
       url: https://github.com/dotnet/AspNetCore.Docs/blob/master/CONTRIBUTING.md
     - text: Leitfaden für Mitwirkende an der ASP.NET Core-API-Referenz
@@ -60,7 +60,7 @@ landingContent:
     - text: Versionshinweise zu .NET Core
       url: https://github.com/dotnet/core/blob/master/release-notes/README.md
     - text: Versionshinweise zu ASP.NET Core
-      url: /aspnet/core/release-notes/aspnetcore-3.1
+      url: ../release-notes/aspnetcore-3.1.md
     - text: Versionshinweise zum C#-Compiler (Roslyn)
       url: https://github.com/dotnet/roslyn/tree/master/docs/ide
     - text: Versionshinweise zu Visual Studio
