--- a/aspnetcore/index.yml
+++ b/aspnetcore/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: WadePickett
   ms.author: wpickett
   ms.date: 06/05/2020
-  ms.openlocfilehash: c90bd79b68252505120a0b28bce2a2b5b9d627d7
-  ms.sourcegitcommit: 66fca14611eba141d455fe0bd2c37803062e439c
+  ms.openlocfilehash: d01cb4dee4c7539c0337343615a259fc7346eb6a
+  ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 07/03/2020
-  ms.locfileid: "85944517"
+  ms.lasthandoff: 09/17/2020
+  ms.locfileid: "90722795"
 highlightedContent:
   items:
   - title: Erstellen einer ASP.NET Core-App auf einer beliebigen Plattform in nur 5 Minuten
@@ -41,7 +41,7 @@ highlightedContent:
     url: tutorials/signalr.md
   - title: ASP.NET 4.x-Dokumentation
     itemType: overview
-    url: https://docs.microsoft.com/aspnet/overview
+    url: /aspnet/overview
 conceptualContent:
   title: Entwickeln von ASP.NET Core-Apps
   summary: Wählen Sie aus interaktiven Web-Apps, Web-APIs, Apps mit MVC-Muster, Echtzeit-Apps und mehr.
@@ -67,7 +67,7 @@ conceptualContent:
     - url: tutorials/first-web-api.md
       itemType: get-started
       text: Erstellen einer Web-API mit ASP.NET Core
-    - url: https://docs.microsoft.com/learn/modules/build-web-api-net-core/
+    - url: /learn/modules/build-web-api-net-core/
       itemType: learn
       text: Erstellen von Web-APIs mit ASP.NET Core
     - url: tutorials/web-api-help-pages-using-swagger.md
@@ -91,7 +91,7 @@ conceptualContent:
     - url: tutorials/razor-pages/razor-pages-start.md
       itemType: get-started
       text: Erstellen Ihrer ersten Razor Pages-Web-App
-    - url: https://docs.microsoft.com/learn/modules/create-razor-pages-aspnet-core/
+    - url: /learn/modules/create-razor-pages-aspnet-core/
       itemType: tutorial
       text: Erstellen einer seitenorientierten Webbenutzeroberfläche, die die Web-API nutzt
     - url: mvc/views/razor.md
@@ -187,7 +187,7 @@ conceptualContent:
     - url: tutorials/first-mvc-app/start-mvc.md
       itemType: tutorial
       text: SQL mit ASP.NET Core
-    - url: blazor/data-binding.md
+    - url: ./blazor/components/data-binding.md
       itemType: concept
       text: Datenbindung in ASP.NET Core Blazor
     - url: tutorials/razor-pages/razor-pages-start.md
@@ -199,19 +199,19 @@ conceptualContent:
     - url: data/ef-rp/intro.md
       itemType: tutorial
       text: Entity Framework Core mit ASP.NET Core MVC
-    - url: https://docs.microsoft.com/visualstudio/azure/vs-azure-tools-connected-services-storage?view=vs-2019&viewFallbackFrom=aspnetcore-3.1
+    - url: /visualstudio/azure/vs-azure-tools-connected-services-storage?view=vs-2019&viewFallbackFrom=aspnetcore-3.1
       itemType: tutorial
       text: Azure Storage
-    - url: https://docs.microsoft.com/azure/visual-studio/vs-storage-aspnet5-getting-started-blobs?toc=%2Faspnet%2Fcore%2Ftoc.json&bc=%2Faspnet%2Fcore%2Fbreadcrumb%2Ftoc.json&view=aspnetcore-3.1
+    - url: /azure/visual-studio/vs-storage-aspnet5-getting-started-blobs?bc=%252faspnet%252fcore%252fbreadcrumb%252ftoc.json&toc=%252faspnet%252fcore%252ftoc.json&view=aspnetcore-3.1
       itemType: tutorial
       text: Blob Storage
-    - url: https://docs.microsoft.com/azure/visual-studio/vs-storage-aspnet5-getting-started-tables?toc=%2Faspnet%2Fcore%2Ftoc.json&bc=%2Faspnet%2Fcore%2Fbreadcrumb%2Ftoc.json&view=aspnetcore-3.1
+    - url: /azure/visual-studio/vs-storage-aspnet5-getting-started-tables?bc=%252faspnet%252fcore%252fbreadcrumb%252ftoc.json&toc=%252faspnet%252fcore%252ftoc.json&view=aspnetcore-3.1
       itemType: concept
       text: Azure Table Storage
   - title: Frühere ASP.NET Framework-Versionen
     summary: Übersichten, Tutorials, grundlegende Konzepte, Architektur- und API-Referenz für vorherige ASP.NET Framework-Versionen
     links:
-    - url: https://docs.microsoft.com/aspnet/overview
+    - url: /aspnet/overview
       itemType: concept
       text: ASP.NET 4.x
   - title: ASP.NET Core-Videotutorials
@@ -237,7 +237,7 @@ additionalContent:
     items:
     - title: API-Referenz für ASP.NET Core
       links:
-      - url: https://docs.microsoft.com/dotnet/api/?view=aspnetcore-3.1
+      - url: /dotnet/api/?view=aspnetcore-3.1
         text: .NET API-Browser
     - title: Hosten und Bereitstellen
       links:
@@ -265,7 +265,7 @@ additionalContent:
         text: Authentifizierung
       - url: security/authorization/introduction.md
         text: Autorisierung
-      - url: https://docs.microsoft.com/learn/modules/secure-aspnet-core-identity/
+      - url: /learn/modules/secure-aspnet-core-identity/
         text: 'Kurs: Sichern einer ASP.NET Core-Web-App mit Identity Framework'
       - url: security/data-protection/introduction.md
         text: Schutz von Daten
@@ -289,9 +289,9 @@ additionalContent:
       links:
       - url: test/razor-pages-tests.md
         text: Komponententests für Razor-Seiten
-      - url: https://docs.microsoft.com/visualstudio/debugger/remote-debugging-azure?view=vs-2019&viewFallbackFrom=aspnetcore-3.1
+      - url: /visualstudio/debugger/remote-debugging-azure?view=vs-2019&viewFallbackFrom=aspnetcore-3.1
         text: Remotedebuggen
-      - url: https://docs.microsoft.com/azure/azure-monitor/app/snapshot-debugger?toc=%2Faspnet%2Fcore%2Ftoc.json&bc=%2Faspnet%2Fcore%2Fbreadcrumb%2Ftoc.json&view=aspnetcore-3.1
+      - url: /azure/azure-monitor/app/snapshot-debugger?bc=%252faspnet%252fcore%252fbreadcrumb%252ftoc.json&toc=%252faspnet%252fcore%252ftoc.json&view=aspnetcore-3.1
         text: Momentaufnahmendebugging
       - url: test/integration-tests.md
         text: Integrationstests
@@ -301,23 +301,23 @@ additionalContent:
         text: Problembehandlung und Debuggen
       - url: fundamentals/logging/index.md
         text: Protokollierung
-      - url: https://docs.microsoft.com/learn/modules/load-test-web-app-azure-devops/
+      - url: /learn/modules/load-test-web-app-azure-devops/
         text: Auslastungstests für Azure-Web-Apps mit Azure DevOps
     - title: Azure und ASP.NET Core
       links:
-      - url: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-dotnet
+      - url: /azure/app-service/app-service-web-get-started-dotnet
         text: Bereitstellen einer ASP.NET Core-Web-App
-      - url: https://docs.microsoft.com/visualstudio/containers/container-tools?view=vs-2019.md
+      - url: /visualstudio/containers/container-tools?view=vs-2019.md
         text: ASP.NET Core und Docker
-      - url: https://docs.microsoft.com/learn/modules/host-a-web-app-with-azure-app-service/
+      - url: /learn/modules/host-a-web-app-with-azure-app-service/
         text: Hosten einer Webanwendung mit Azure App Service
-      - url: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase
+      - url: /azure/app-service/app-service-web-tutorial-dotnet-sqldatabase
         text: App Service und Azure SQL-Datenbank
-      - url: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-connect-msi
+      - url: /azure/app-service/app-service-web-tutorial-connect-msi
         text: Verwaltete Identität mit ASP.NET Core und Azure SQL-Datenbank
-      - url: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-rest-api
+      - url: /azure/app-service/app-service-web-tutorial-rest-api
         text: Web-API mit CORS in Azure App Service
-      - url: https://docs.microsoft.com/learn/modules/capture-application-logs-app-service/
+      - url: /learn/modules/capture-application-logs-app-service/
         text: Erfassen von Webanwendungsprotokollen mit App Service-Diagnoseprotokollierung
     - title: Leistung
       links:
@@ -339,7 +339,7 @@ additionalContent:
         text: Modellbindung
       - url: mvc/models/validation.md
         text: Modellvalidierung
-      - url: fundamentals/middleware.md
+      - url: ./fundamentals/middleware/index.md
         text: Schreiben von Middleware
       - url: fundamentals/middleware/request-response.md
         text: Anforderungs- und Antwortvorgänge
@@ -363,14 +363,14 @@ additionalContent:
         text: ASP.NET zu ASP.NET Core
     - title: Architektur
       links:
-      - url: https://docs.microsoft.com/dotnet/architecture/modern-web-apps-azure/choose-between-traditional-web-and-single-page-apps
+      - url: /dotnet/architecture/modern-web-apps-azure/choose-between-traditional-web-and-single-page-apps
         text: Auswählen zwischen herkömmlichen Webanwendungen und Single-Page-Webanwendungen (SPAs)
-      - url: https://docs.microsoft.com/dotnet/architecture/modern-web-apps-azure/architectural-principles
+      - url: /dotnet/architecture/modern-web-apps-azure/architectural-principles
         text: Architekturprinzipien
-      - url: https://docs.microsoft.com/dotnet/architecture/modern-web-apps-azure/common-web-application-architectures
+      - url: /dotnet/architecture/modern-web-apps-azure/common-web-application-architectures
         text: Häufig verwendete Webanwendungsarchitekturen
-      - url: https://docs.microsoft.com/dotnet/architecture/modern-web-apps-azure/common-client-side-web-technologies
+      - url: /dotnet/architecture/modern-web-apps-azure/common-client-side-web-technologies
         text: Allgemeine clientseitige Webtechnologien
-      - url: https://docs.microsoft.com/dotnet/architecture/modern-web-apps-azure/development-process-for-azure
+      - url: /dotnet/architecture/modern-web-apps-azure/development-process-for-azure
         text: Entwicklungsprozess für Azure
   footer: Beitragen zur ASP.NET Core-Dokumentation Lesen Sie den [Leitfaden für Mitwirkende](https://github.com/aspnet/AspNetCore.Docs/blob/master/CONTRIBUTING.md).
