--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -174,6 +174,9 @@
             - name: Implementieren von Resilienz >>
               displayName: 'tutorial, kubernetes, aks, acr, docker'
               href: /learn/modules/microservices-resiliency-aspnet-core/
+            - name: Bereitstellen mit GitHub Actions >>
+              display: 'tutorial, kubernetes, aks, acr, docker, devops'
+              href: /learn/modules/microservices-devops-aspnet-core/
         - name: Datenzugriff >>
           displayName: 'tutorial, ef, entity framework'
           href: /learn/modules/persist-data-ef-core/
@@ -338,7 +341,7 @@
                 - name: InputDate
                   href: blazor/forms-validation.md#built-in-forms-components
                 - name: InputFile
-                  href: blazor/file-uploads.md
+                  uid: blazor/file-uploads
                 - name: InputNumber
                   href: blazor/forms-validation.md#built-in-forms-components
                 - name: InputRadio
@@ -366,7 +369,7 @@
                 - name: Titel
                   href: blazor/fundamentals/additional-scenarios.md#influence-html-head-tag-elements
                 - name: Virtualize
-                  href: blazor/components/virtualization.md
+                  uid: blazor/components/virtualization
             - name: Kaskadierende Werte und Parameter
               uid: blazor/components/cascading-values-and-parameters
             - name: Datenbindung
