--- a/aspnetcore/whats-new/toc.yml
+++ b/aspnetcore/whats-new/toc.yml
@@ -1,10 +1,12 @@
-- name: Neues
+- name: Neuigkeiten
   href: index.yml
   expanded: true
   items:
     - name: 2020
       expanded: true
       items:
+        - name: Oktober
+          href: 2020-10.md
         - name: September
           href: 2020-09.md
         - name: August
@@ -15,5 +17,3 @@
           href: 2020-06.md
         - name: May
           href: 2020-05.md
-        - name: April
-          href: 2020-04.md
