--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -182,6 +182,9 @@
             - name: Protokollieren und Überwachen >>
               display: 'tutorial, kubernetes, aks, acr, docker, serilog'
               href: /learn/modules/microservices-logging-aspnet-core/
+            - name: Implementieren von Featureflags > >
+              display: 'tutorial, kubernetes, aks, acr, docker'
+              href: /learn/modules/microservices-configuration-aspnet-core/
         - name: Datenzugriff >>
           displayName: 'tutorial, ef, entity framework'
           href: /learn/modules/persist-data-ef-core/
