--- a/aspnetcore/whats-new/toc.yml
+++ b/aspnetcore/whats-new/toc.yml
@@ -1,10 +1,12 @@
-- name: Neuigkeiten
+- name: Neues
   href: index.yml
   expanded: true
   items:
     - name: 2020
       expanded: true
       items:
+        - name: November
+          href: 2020-11.md
         - name: Oktober
           href: 2020-10.md
         - name: September
@@ -15,5 +17,3 @@
           href: 2020-07.md
         - name: June
           href: 2020-06.md
-        - name: May
-          href: 2020-05.md
