--- a/aspnetcore/whats-new/index.yml
+++ b/aspnetcore/whats-new/index.yml
@@ -5,18 +5,20 @@ metadata:
   title: ASP.NET Core-Dokumentation – Neuerungen
   description: Dokumentation zu den neuen und aktualisierten Inhalten in ASP.NET Core.
   ms.topic: landing-page
-  ms.date: 12/01/2020
-  ms.openlocfilehash: 0d134ccfeb958e47e3a69fbfb29a8ab388d539fd
-  ms.sourcegitcommit: 94c8cc1a8ce2bdba0ebdd9d37c155bf42d3cc62b
+  ms.date: 01/04/2020
+  ms.openlocfilehash: a052e6dcd1439d85df5c31409a427c7df4a16216
+  ms.sourcegitcommit: 3593c4efa707edeaaceffbfa544f99f41fc62535
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/01/2020
-  ms.locfileid: "96473702"
+  ms.lasthandoff: 01/04/2021
+  ms.locfileid: "97865589"
 landingContent:
 - title: Neuerungen in ASP.NET Core
   linkLists:
   - linkListType: whats-new
     links:
+    - text: Dezember 2020
+      url: 2020-12.md
     - text: November 2020
       url: 2020-11.md
     - text: Oktober 2020
@@ -27,8 +29,6 @@ landingContent:
       url: 2020-08.md
     - text: Juli 2020
       url: 2020-07.md
-    - text: Juni 2020
-      url: 2020-06.md
 - title: ASP.NET Core-Dokumentation mitgestalten
   linkLists:
   - linkListType: overview
