--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -766,6 +766,8 @@
       uid: grpc/interprocess
     - name: Erstellen von JSON-Web-APIs über gRPC
       uid: grpc/httpapi
+    - name: Code-First-gRPC-Dienste und -Clients
+      uid: grpc/code-first
     - name: Verwalten von Protobuf-Verweisen mit dotnet-grpc
       uid: grpc/dotnet-grpc
     - name: Testen von gRPC-Diensten mit gRPCurl
