--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -748,6 +748,8 @@
           uid: grpc/deadlines-cancellation
     - name: gRPC-Dienste mit ASP.NET Core
       uid: grpc/aspnetcore
+    - name: Unterstützte Plattformen
+      uid: grpc/supported-platforms
     - name: Verwenden von gRPC in Browser-Apps
       uid: grpc/browser
     - name: Konfiguration
