--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -304,7 +304,7 @@
           uid: blazor/tooling
         - name: Hostingmodelle
           uid: blazor/hosting-models
-        - name: Lernprogramme
+        - name: Tutorials
           items:
             - name: Erstellen einer Aufgabenlisten-App in Blazor
               uid: tutorials/build-a-blazor-app
@@ -326,8 +326,10 @@
               uid: blazor/fundamentals/logging
             - name: Behandeln von Fehlern
               uid: blazor/fundamentals/handle-errors
-            - name: Zusätzliche Szenarien
-              uid: blazor/fundamentals/additional-scenarios
+            - name: SignalR
+              uid: blazor/fundamentals/signalr
+            - name: Statische Dateien
+              uid: blazor/fundamentals/static-files
         - name: Komponenten
           items:
             - name: Übersicht
@@ -440,6 +442,8 @@
               href: blazor/security/webassembly/index.md#authentication-component
             - name: AuthorizeView
               href: blazor/security/index.md#authorizeview-component
+            - name: CascadingValue
+              href: blazor/components/cascading-values-and-parameters.md#cascadingvalue-component
             - name: InputCheckbox
               href: blazor/forms-validation.md#built-in-forms-components
             - name: InputDate
